# gRPC-Java-Cpp-calculator

./: README.md
cpp-server/: CMakeLists.txt  calculator.grpc.pb.cc  calculator.grpc.pb.h  calculator.pb.cc  calculator.pb.h
cpp-server/src/: calculator_server.cpp
java-client/: pom.xml
java-client/src/main/java/com/calculator/client/: CalculatorClient.java
proto/: calculator.proto
